src/objects/APTS_Recurring_Batch_Countries__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>APTS_Ignore_Billing_Run__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is set to True neglect from setting the processed flag to false.</description>
        <label>Ignore Billing Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Org__c</fullName>
        <label>Sales Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>APTS_Recurring_Batch_Countries</label>
</CustomObject>